added home html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Katta topshiriq</title>
 </head>
 <body>
-    <a href="./index.html">Home</a>
+    <a href="./index.html">Index</a>
     <a href="./contact.html">Contact</a>
     <a href="./register.html">Register</a>
+     <a href="./home.html">Home</a>
     <hr>
     <label for="">Hi, I am </label>
     <input type="text" placeholder="ismingizni kiriting">
