--- a/register.html
+++ b/register.html
@@ -7,9 +7,10 @@
 
 </head>
 <body>
-    <a href="./index.html">Home</a>
+    <a href="./index.html">Index</a>
     <a href="./contact.html">Contact</a>
     <a href="./register.html">Register</a>
+     <a href="./home.html">Home</a>
     <hr>
     <p>
 
